src/main/java/com/example/property_management/error/exception/RateLimitExceededException.java
package com.example.property_management.error.exception;

public class RateLimitExceededException extends RuntimeException {
    public RateLimitExceededException(String message) {
        super(message);
    }
}
